objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <label>Expiration date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Subordinate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Name__c</fullName>
        <label>Office Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Junior</fullName>
                    <default>true</default>
                    <label>Junior</label>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>HR-manager</fullName>
                    <isActive>false</isActive>
                    <label>HR-manager</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalaryOld__c</fullName>
        <label>SalaryOld</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <recordTypes>
        <fullName>Developer</fullName>
        <active>true</active>
        <label>Developer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA</fullName>
        <active>true</active>
        <label>QA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>